@@ -4,16 +4,25 @@
 \title{DPQmpfr News}
 \encoding{UTF-8}
 
-\section{Version 0.3-3 (2024-01-29, svn r303)}{
+\section{Version 0.3-3 (2024-04-30, svn r303)}{
   \subsection{NEW FEATURES}{
     \itemize{
       \item \code{stirlerrSer(n, k)} now allows \code{k <= 22}.
+
+      \item \code{dtWVm()} is an \dQuote{mpfr-ized} version of \CRANpkg{DPQ}'s
+      \code{\link[DPQ]{dtWV}()}.
     }
   }
   \subsection{Misc}{
     \itemize{
       \item internal \code{dpoisEr()}, gets arg \code{log2.min}, back to previous (2020)
       value, such that "correct underflow" in R does not give rel.err of -1.
+    }
+  }
+  \subsection{DEPRECATED AND DEFUNCT}{
+    \itemize{
+      \item \code{dntJKBm()} is deprecated, as \CRANpkg{DPQ}'s
+      \code{\link[DPQ]{dntJKBf}()} works already perfectly \dQuote{mpfr-ized}.
     }
   }
 }
@@ -25,7 +34,7 @@
       \item utility functions for testing \code{dpois_raw()} etc, % ../R/dpoisEr.R
       notably for package \CRANpkg{DPQ}.
 
-      \item new \dQuote{mpfr-ified} \code{pnormAsymp()} and \code{qnormAsymp()}
+      \item new \dQuote{mpfr-ized} \code{pnormAsymp()} and \code{qnormAsymp()}
 
       \item new \code{ldexp(f, E)} utility.
     }
